-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.3.0
-
None
-
-
e4315204b (dev), ef2a6ba74 (6.6), 3aa2f60a6 (tqtc/lts-6.5), 466dbf95a (tqtc/lts-6.2)
I catched it in "sliders" example. Trying to set "Minimum value" spinbox to value greater than in "Maxmum value" spinbox.
On some machines it leads to crashes, on others - to different artifacts.
/edit: Christian Ehrlicher
Here the minimal reproducer
int main(int argc, char *argv[]) { QApplication a(argc, argv); QDial dial; dial.setRange(30, 30); dial.setWrapping(true); dial.setValue(45); dial.show(); return a.exec(); }
For Gerrit Dashboard: QTBUG-104641 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
518229,1 | QDial: don't crash when min==max and setting a value != min & max | tqtc/esm-5.15 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |
517620,4 | QDial: don't crash when min==max and setting a value != min & max | dev | qt/qtbase | Status: MERGED | +2 | 0 |
517779,2 | QDial: don't crash when min==max and setting a value != min & max | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
517932,2 | QDial: don't crash when min==max and setting a value != min & max | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
518103,2 | QDial: don't crash when min==max and setting a value != min & max | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |