QDial: don't crash when min==max and setting a value != min & max

QDial::bound() is crashing when min == max due to a division by zero.
Therefore check for this condition beforehand and return min.

Pick-to: 5.15
Fixes: QTBUG-104641
Change-Id: I612625af1ad18333d59a7771abfdec602301b58e
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit e4315204b1412d74842b3167c3eb9a49dc233355)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit ef2a6ba74f2ac176744ede6ab057162f54f0ace1)
(cherry picked from commit 3aa2f60a6f6cc8b1b7ca089e8043aa87a08eba0e)